About content overflow issue

--- a/app/styles/views/about/components/_content.scss
+++ b/app/styles/views/about/components/_content.scss
@@ -6,15 +6,15 @@
   @include flexColumn;
   z-index: 4;
   box-shadow: 2px 2px 10px 2px rgba(0,0,0,0.8);
+  background-color: rgba(0,0,0,0.9);
+  border: 1px solid $contrastColor;
   width: 83%;
-  height: 80%;
+  height: 84%;
   border-radius: 4px;
   color: rgba(250,250,250,0.9);
   text-align: center;
   .about {
     text-shadow: #333 1px 1px 10px, #333 1px 1px 10px;
-    border: 1px solid $contrastColor;
-    background-color: rgba(0,0,0,0.9);
     border-radius: 5px;
     padding: 4vh 4vw;
     overflow: auto;
@@ -29,7 +29,6 @@
     }
   }
   .social {
-    padding-bottom: 15px;
     & > a {
       margin: 0px 7px;
     }
